ADD: proper markdown handlinng

--- a/package.json
+++ b/package.json
@@ -10,17 +10,39 @@
     "clean": "rm -rf dist"
   },
   "dependencies": {
+    "buffer": "^6.0.3",
+    "front-matter": "^4.0.2",
+    "mdast-util-gfm-autolink-literal": "^1.0.3",
+    "mdast-util-gfm-footnote": "^1.0.2",
+    "mdast-util-gfm-strikethrough": "^1.0.3",
+    "mdast-util-gfm-table": "^1.0.7",
+    "mdast-util-gfm-task-list-item": "^1.0.2",
+    "micromark-extension-gfm-autolink-literal": "^1.0.5",
+    "micromark-extension-gfm-footnote": "^1.1.2",
+    "micromark-extension-gfm-strikethrough": "^1.0.7",
+    "micromark-extension-gfm-table": "^1.0.7",
+    "micromark-extension-gfm-task-list-item": "^1.0.5",
+    "micromark-util-combine-extensions": "^1.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "rehype-external-links": "^1.0.1",
+    "rehype-highlight": "^5.0.2",
+    "rehype-raw": "^6.1.1",
+    "rehype-sanitize": "^5.0.1",
+    "rehype-stringify": "^9.0.4",
+    "remark-parse": "^10.0.2",
+    "remark-rehype": "^10.1.0",
+    "unified": "^10.1.2",
+    "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
     "@vitejs/plugin-react": "^4.2.1",
-    "vite": "^5.0.8",
     "chokidar": "^3.5.3",
     "fs-extra": "^11.2.0",
-    "glob": "^10.3.10"
+    "glob": "^10.3.10",
+    "vite": "^5.0.8"
   }
 }
