--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:debug": "vite build --debug --logLevel info",
     "build:pages": "vite build --mode pages",
     "preview": "vite preview",
     "clean": "rm -rf dist"
