--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "build:debug": "vite build --debug --logLevel info",
-    "build:pages": "vite build --mode pages",
-    "preview": "vite preview",
+    "build": "npm run clean && vite build",
     "clean": "rm -rf dist"
   },
   "dependencies": {
