--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "vite",
     "build": "npm run clean && vite build",
+    "build:pages": "vite build --config vite.config.pages.js",
     "clean": "rm -rf dist"
   },
   "dependencies": {
