--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "npm run clean && vite build",
+    "build": "npm run clean && npm run build:pages",
+    "build--old": "npm run clean && vite build",
     "build:pages": "vite build --config vite.config.pages.js",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist/**"
   },
   "dependencies": {
     "buffer": "^6.0.3",
