--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "react-helmet": "^6.1.0",
     "rehype-external-links": "^1.0.1",
     "rehype-highlight": "^5.0.2",
+    "rehype-parse": "^9.0.1",
     "rehype-raw": "^6.1.1",
+    "rehype-react": "^8.0.0",
     "rehype-sanitize": "^5.0.1",
     "rehype-stringify": "^9.0.4",
     "remark-parse": "^10.0.2",
